# solana-dark-vaults

./: .gitignore  Anchor.toml  Arcium.toml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  VERSIONS.md  rust-toolchain.toml
.devcontainer/: devcontainer.json  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md
.github/workflows/: arcium.yml  ci.yml  lint.yml
agent-coordinator/: package-lock.json  package.json  tsconfig.json
agent-coordinator/src/: allocation.ts  config.ts  demo.ts  index.ts  mxe_client.ts  oracle_feed.ts  settlement.ts  types.ts
agent-coordinator/src/payments/: mock_facilitator.ts  x402_client.ts
agent-coordinator/test/: coordinator.test.ts
anchor-programs/rwa_dark_vault/: Cargo.toml
anchor-programs/rwa_dark_vault/src/: errors.rs  lib.rs  state.rs
anchor-programs/rwa_dark_vault/src/adapters/: README.md  mock_pool.rs  mod.rs
anchor-programs/rwa_dark_vault/src/instructions/: admin.rs  deposit.rs  initialize.rs  mod.rs  queue_rebalance.rs  settle_rebalance.rs  withdraw.rs
arcium-circuits/: Cargo.toml
arcium-circuits/src/: arcis_rebalance.rs  lib.rs  rebalance.rs
arcium-circuits/tests/: reference.rs
docs/: architecture.md  devnet.md  limitations.md  local-setup.md  roadmap.md  threat-model.md
docs/audit/: 2026-07-self-audit.md  README.md  checklist.md
docs/releases/: v0.1.0.md
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: lib.rs
scripts/: demo.ps1  demo.sh  deploy-devnet.sh  localnet-up.sh  record-demo.sh  verify-docs.sh
tests/anchor/: share_math.md
tests/fixtures/: allocation-corpus.json
