[workspace]
members = [
  "anchor-programs/rwa_dark_vault",
]
exclude = ["arcium-circuits", "encrypted-ixs"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.97"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
