[workspace]
members = [
  "anchor-programs/rwa_dark_vault",
  "encrypted-ixs",
]
exclude = ["arcium-circuits"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.97"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
