[package]
name = "dark-vault-circuits"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.97"

[lib]
name = "dark_vault_circuits"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[workspace]
