[package]
name = "rwa-dark-vault"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "rwa_dark_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
cspl = []

[dependencies]
anchor-lang = "=1.1.2"

[lints]
workspace = true

